fix: ajuste no contraste do ID

--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -25,11 +25,10 @@ main {
 
 .id{
     position: absolute;
-    right: 8px;
+    right: 12px;
     top: 16px;
     text-align: right;
     font-size: 12px;
-    color: black;
 }
 
 .card .name {
